Prevented scrollbar interference

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,3 +1,8 @@
+body {
+  overflow: unset !important;
+  padding: unset !important;
+}
+
 .App {
   margin-top: auto;
   margin-bottom: auto;
